feat : adapt flutter to fiber fix typos in README, add README link. adapt flutter to fiber and fix fiber schema.
